@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 the original author or authors.
+ * Copyright 2019-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,9 +25,9 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -91,7 +91,7 @@ class ComparatorChainTests {
     Comparator comparatorB = mock(Comparator.class);
     when(comparatorB.compare(any(), any())).thenReturn(-1);
 
-    int result = new ComparatorChain(Arrays.asList(comparatorA, comparatorB))
+    int result = new ComparatorChain(List.of(comparatorA, comparatorB))
         .compare(1, 2);
 
     assertTrue(result < 0);
@@ -112,7 +112,7 @@ class ComparatorChainTests {
     Comparator comparatorB = mock(Comparator.class);
     when(comparatorB.compare(any(), any())).thenReturn(1);
 
-    int result = new ComparatorChain(Arrays.asList(comparatorA, comparatorB))
+    int result = new ComparatorChain(List.of(comparatorA, comparatorB))
         .compare(1, 2);
 
     assertTrue(result < 0);
